# balong-oled-emulator

./: .clang-format  .gitignore  CMakeLists.txt  GEMINI.md  HACKING.md  README.md  generate_bitmap_font.py  pyproject.toml
custom-menu/: CMakeLists.txt
custom-menu/apps/: CMakeLists.txt
custom-menu/apps/hello_world/include/: symbols_demo.hpp
custom-menu/apps/hello_world/src/: app.cpp
custom-menu/apps/matrix/: README.md
custom-menu/apps/matrix/src/: app.cpp
custom-menu/apps/shell_binding/include/: adapter.hpp  subprocess.hpp
custom-menu/apps/shell_binding/src/: adapter.cpp  main.cpp  subprocess.cpp
custom-menu/assets/: CMakeLists.txt  convert_image_to_rgba.py
custom-menu/fonts/: generate_bitmap_font.py
custom-menu/include/: clay_fb_renderer.hpp  display_controller.hpp  main_menu.hpp  so_app_loader.hpp  so_plugin_loader.hpp  stdfn_timer_helper.hpp  timer_helper.hpp
custom-menu/include/fonts/: poppins_12.hpp
custom-menu/plugins/: CMakeLists.txt
custom-menu/plugins/hello_world/src/: plugin.cpp
custom-menu/src/: app_api.cpp  display_controller.cpp  main.cpp  main_menu.cpp  plugin_api.cpp  so_app_loader.cpp  so_plugin_loader.cpp  stdfn_timer_helper.cpp
custom-menu/ui/: CMakeLists.txt
custom-menu/ui/include/: Screen.hpp  ScreenStack.hpp  UIContext.hpp  UISession.hpp  screen.hpp  screen_stack.hpp  ui_context.hpp  ui_session.hpp
custom-menu/ui/include/ui/: image.hpp  ui_session.hpp  ui_session_app.hpp  ui_theme.hpp  utils.hpp
custom-menu/ui/include/ui/actions/: button.hpp  iaction.hpp  label.hpp  page_break.hpp  radio.hpp  toggle.hpp
custom-menu/ui/include/ui/screens/: iscreen.hpp  loading_screen.hpp  menu_screen.hpp
custom-menu/ui/src/: Screen.cpp  ScreenStack.cpp  UIContext.cpp  UISession.cpp  image.cpp  loading_screen.cpp  screen.cpp  screen_stack.cpp  ui_context.cpp  ui_session.cpp
emulator/: CMakeLists.txt
emulator/include/: display.h  hooks.h  sdl_utils.h  timer.h
emulator/src/: display.cpp  hooks.cpp  main.cpp  sdl_utils.cpp  timer.cpp
fonts/: CMakeLists.txt  generate_bitmap_font.py  generate_glyph_header.py  glyph_overrides.yaml
include/: debug.h  display.h  hooked_functions.h  hooks.h  image_descriptor.h  sdk19compat.hpp  sdl_utils.h  template_utils.hpp  thread_name.h  timer.h
include/apps/: _app_example_snippet.c  _app_example_snippet.cpp  app_api.h  app_api.hpp
include/plugins/: _plugin_example_snippet.c  _plugin_example_snippet.cpp  plugin_api.h  plugin_api.hpp
src/: display.cpp  hooks.cpp  main.cpp  sdl_utils.cpp
